--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "locomotive-scroll": "^4.1.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-helmet-async": "^2.0.5",
     "react-scroll-parallax": "^3.4.5"
   },
   "devDependencies": {
