--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-helmet-async": "^2.0.5",
+    "react-router-dom": "^6.26.2",
     "react-scroll-parallax": "^3.4.5"
   },
   "devDependencies": {
