--- a/.env
+++ b/.env
@@ -1,1 +1,6 @@
 VITE_S3_BASE_HOME_URL=https://camerawaalaa.s3.eu-central-1.amazonaws.com/Home+Page
+
+VITE_S3_CONTACT_URL=https://camerawaalaa.s3.eu-central-1.amazonaws.com/Contact/contact.jpg
+VITE_EMAILJS_SERVICE_ID=service_5itnqkt
+VITE_EMAILJS_TEMPLATE_ID=template_ose88jf
+VITE_EMAILJS_USER_ID=your_user_id
