--- a/.env
+++ b/.env
@@ -4,3 +4,13 @@ VITE_S3_CONTACT_URL=https://camerawaalaa.s3.eu-central-1.amazonaws.com/Contact/c
 VITE_EMAILJS_SERVICE_ID=service_5itnqkt
 VITE_EMAILJS_TEMPLATE_ID=template_ose88jf
 VITE_EMAILJS_USER_ID=wPjO7cDtMv6L-mlIu
+
+VITE_S3_REVIEW_URL=https://camerawaalaa.s3.eu-central-1.amazonaws.com/Review/review.jpg
+
+VITE_FIREBASE_API_KEY=AIzaSyC-sgChdzBFMvuKGGFpvDMT3a39QTW8aIk
+VITE_FIREBASE_AUTH_DOMAIN=camerawaalaa.firebaseapp.com
+VITE_FIREBASE_PROJECT_ID=camerawaalaa
+VITE_FIREBASE_STORAGE_BUCKET=camerawaalaa.appspot.com
+VITE_FIREBASE_MESSAGING_SENDER_ID=319071536918
+VITE_FIREBASE_APP_ID=1:319071536918:web:32b00a2be5397624d93237
+VITE_FIREBASE_MEASUREMENT_ID=G-JJNXX55VLS
